--- a/VisualizerUI/Properties/Resources.resx
+++ b/VisualizerUI/Properties/Resources.resx
@@ -117,8 +117,17 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="CHART_COST_AMT_ACT_LEGEND" xml:space="preserve">
+    <value>Actual</value>
+  </data>
+  <data name="CHART_COST_AMT_TITLE" xml:space="preserve">
+    <value>Cost Amount</value>
+  </data>
   <data name="MAIN_WINDOW_TITLE" xml:space="preserve">
     <value>NAV Visualizer</value>
+  </data>
+  <data name="MW_COMPANY_LABEL" xml:space="preserve">
+    <value>Company:</value>
   </data>
   <data name="MW_DATABASE_LABEL" xml:space="preserve">
     <value>Database:</value>
