--- a/VisualizerUI/Properties/Resources.resx
+++ b/VisualizerUI/Properties/Resources.resx
@@ -126,6 +126,24 @@
   <data name="CB_KEY_FIGURE_COST_AMOUNT" xml:space="preserve">
     <value>Cost Amount</value>
   </data>
+  <data name="CB_KEY_FIGURE_SALES_AMOUNT" xml:space="preserve">
+    <value>Sales Amount</value>
+  </data>
+  <data name="CB_PERIOD_TYPE_DAY" xml:space="preserve">
+    <value>Day</value>
+  </data>
+  <data name="CB_PERIOD_TYPE_MONTH" xml:space="preserve">
+    <value>Month</value>
+  </data>
+  <data name="CB_PERIOD_TYPE_QUARTER" xml:space="preserve">
+    <value>Quarter</value>
+  </data>
+  <data name="CB_PERIOD_TYPE_WEEK" xml:space="preserve">
+    <value>Week</value>
+  </data>
+  <data name="CB_PERIOD_TYPE_YEAR" xml:space="preserve">
+    <value>Year</value>
+  </data>
   <data name="CHART_COST_AMT_ACT_LEGEND" xml:space="preserve">
     <value>Actual</value>
   </data>
@@ -137,6 +155,12 @@
   </data>
   <data name="CHART_COST_AMT_TOT_LEGEND" xml:space="preserve">
     <value>Total</value>
+  </data>
+  <data name="CHART_SALES_AMT_ACT_LEGEND" xml:space="preserve">
+    <value>Actual</value>
+  </data>
+  <data name="CHART_SALES_AMT_TITLE" xml:space="preserve">
+    <value>Sales Amount</value>
   </data>
   <data name="MAIN_WINDOW_TITLE" xml:space="preserve">
     <value>NAV Visualizer</value>
@@ -158,6 +182,9 @@
   </data>
   <data name="MW_NAV_SERVER_LABEL" xml:space="preserve">
     <value>NAV Server:</value>
+  </data>
+  <data name="MW_PERIOD_TYPE_LABEL" xml:space="preserve">
+    <value>Period Type:</value>
   </data>
   <data name="MW_START_DATE_LABEL" xml:space="preserve">
     <value>Start date:</value>
