--- a/VisualizerUI/Properties/Resources.resx
+++ b/VisualizerUI/Properties/Resources.resx
@@ -162,6 +162,12 @@
   <data name="CHART_SALES_AMT_TITLE" xml:space="preserve">
     <value>Sales Amount</value>
   </data>
+  <data name="ERROR_TITLE" xml:space="preserve">
+    <value>Error</value>
+  </data>
+  <data name="ERROR_UPDATE_CHART" xml:space="preserve">
+    <value>Error during updating chart! Please update Visualizer Database.</value>
+  </data>
   <data name="MAIN_WINDOW_TITLE" xml:space="preserve">
     <value>NAV Visualizer</value>
   </data>
